--- a/jupyter-book/_toc.yml
+++ b/jupyter-book/_toc.yml
@@ -1,20 +1,11 @@
-file: intro
-title: Deep learning classification from brain MRI
-sections:
-- header: Background
-- file: Notebooks-AD-DL/clinical.md
-  title: Clinical context
-- file: Notebooks-AD-DL/deep_learning.md
-  title: Deep learning classification
+file: index
 
-- header: The basics
-- file: Notebooks-AD-DL/preprocessing
-  title: Prepare your neuroimaging data
-- file: Notebooks-AD-DL/inference
-  title: Perfom classification using pretrained models
+title: Deep Learning for Medical Imaging
 
-- header: Going further
-- file: Notebooks-AD-DL/label_extraction
-  title: Define your population
-- file: Notebooks-AD-DL/training
-  title: Train your own models
+- part: Part 1 - Classification in the context of computer-aided diagnosis 
+  chapters:
+    - file: src_notebooks/part1
+
+- part: Part 2 - Image synthesis
+  chapters:
+    - file: src_notebooks/part2
