--- a/jupyter-book/requirements.txt
+++ b/jupyter-book/requirements.txt
@@ -1,8 +1,9 @@
 # Package to install to buil the document
-sphinx-tabs
-sphinx-click
-myst-parser
-myst-nb
-jupyterlab
-jupytext
-jupyter-book
+sphinxcontrib-bibtex==1.0.0
+sphinx-tabs==1.3.0
+sphinx-click==2.5.0
+myst-parser==0.12.10
+myst-nb==0.10.1
+jupyterlab==1.2.0
+jupytext==1.7.1
+jupyter-book==0.8.3
