Add 'background and resources' chapter at the beginning of the toc

--- a/jupyter-book/_toc.yml
+++ b/jupyter-book/_toc.yml
@@ -1,7 +1,11 @@
 - file: index
   title: Deep Learning for Medical Imaging
 
-- part: Part 1 - Classification in the context of computer-aided diagnosis 
+- part: Background and resources
+  chapters:
+    - file: notebooks/background
+
+- part: Part 1 - Classification in the context of computer-aided diagnosis
   chapters:
     - file: notebooks/classification
 
