--- a/jupyter-book/_config.yml
+++ b/jupyter-book/_config.yml
@@ -26,8 +26,10 @@ launch_buttons:
 ######################################################################################
 # Execution settings
 execute:
-  execute_notebooks         : "off"  # Whether to execute notebooks at build time. Must be one of ("auto", "force", "cache", "off")
+  execute_notebooks         : cache  # Whether to execute notebooks at build time. Must be one of ("auto", "force", "cache", "off")
   cache                     : ""  # A path to the jupyter cache that will be used to store execution artifacs. Defaults to `_build/.jupyter_cache/`
+  exclude_patterns:
+    - 
 
 html:
   #favicon: _static/favicon.ico
