--- a/jupyter-book/_config.yml
+++ b/jupyter-book/_config.yml
@@ -29,7 +29,7 @@ execute:
   execute_notebooks         : cache  # Whether to execute notebooks at build time. Must be one of ("auto", "force", "cache", "off")
   cache                     : ""  # A path to the jupyter cache that will be used to store execution artifacs. Defaults to `_build/.jupyter_cache/`
   exclude_patterns:
-    - 
+    - 'background' 
 
 html:
   #favicon: _static/favicon.ico
