--- a/jupyter-book/requirements.txt
+++ b/jupyter-book/requirements.txt
@@ -7,3 +7,9 @@ myst-nb==0.10.1
 jupyterlab==1.2.0
 jupytext==1.7.1
 jupyter-book==0.8.3
+torch==1.7.0
+torchsummary==1.5.1
+torchvision==0.8.1
+matplotlib==3.2.2
+numpy==1.19.4
+pandas==1.1.5
