--- a/jupyter-book/requirements.txt
+++ b/jupyter-book/requirements.txt
@@ -7,13 +7,12 @@ myst-nb==0.10.1
 jupyterlab==1.2.0
 jupytext==1.7.1
 jupyter-book==0.8.3
-torch==1.7.0
+torch>=1.1.0
 matplotlib==3.2.2
 numpy==1.19.4
 pandas==1.1.5
 scipy==1.4.1
-nibabel==3.0.2
-scikit-learn==0.22.2
+scikit-learn>=0.22
 nibabel==3.0.2
 torchsummary==1.5.1
-torchvision==0.8.1
+torchvision>=0.8.0
