--- a/jupyter-book/requirements.txt
+++ b/jupyter-book/requirements.txt
@@ -11,6 +11,7 @@ torch>=1.1.0
 matplotlib==3.2.2
 numpy==1.19.4
 pandas==1.1.5
+scipy==1.4.1
 scikit-learn>=0.22
 nibabel==3.0.2
 torchsummary==1.5.1
